--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 
   <footer>Derechos reservados @Hiram Hdez</footer>
 
-  <script src="./src/secrets.js"></script>
-  <script src="./src/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script type="module" src="./src/secrets.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 </html>
