Location y hash navigation

--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="./src/secrets.js"></script>
   <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./src/navigation.js"></script>
 </body>
 </html>
