--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <form id="searchForm" class="header-searchForm">
       <input type="text" placeholder="Vengadores" />
-      <button>🔍</button>
+      <button id="searchBtn">🔍</button>
     </form>
   </header>
 
@@ -47,17 +47,11 @@
     <h2 class="categoriesPreview-title">Categorías</h2>
 
     <article class="categoriesPreview-list">
-      <div class="category-container">
+
+      <!-- <div class="category-container">
         <h3 id="id28" class="category-title">Romance</h3>
-      </div>
+      </div> -->
 
-      <div class="category-container">
-        <h3 id="id16" class="category-title">Drama</h3>
-      </div>
-
-      <div class="category-container">
-        <h3 id="id14" class="category-title">Acción</h3>
-      </div>
     </article>
   </section>
 
@@ -142,8 +136,9 @@
   <footer>Derechos reservados @Hiram Hdez</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script type="module" src="./src/secrets.js"></script>
-  <script type="module" src="./src/main.js"></script>
-  <script type="module" src="./src/navigation.js"></script>
+  <script src="./src/secrets.js"></script>
+  <script src="./src/nodes.js"></script>
+  <script src="./src/main.js"></script>
+  <script src="./src/navigation.js"></script>
 </body>
 </html>
